refactoring MarkingAbsenteeismCallbackQueryHandler